make possible to turn off GC logging